New way to specify internal plugin name with just the basename (launcher -> liblauncher.so) combined with X-XFCE-Module-Path entry to specifiy the location. The old way is still supported, so this change is 100% backward compatible.
(Old svn revision: 23492)

--- a/plugins/clock/clock.desktop.in.in
+++ b/plugins/clock/clock.desktop.in.in
@@ -4,4 +4,6 @@ Encoding=UTF-8
 _Name=Clock
 _Comment=What time is it?
 Icon=xfce-schedule
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
+X-XFCE-Module=clock
+X-XFCE-Module-Path=@INTERNAL_PLUGIN_PATH@
+
