--- a/plugins/launcher/launcher.desktop.in.in
+++ b/plugins/launcher/launcher.desktop.in.in
@@ -4,4 +4,6 @@ Encoding=UTF-8
 _Name=Launcher
 _Comment=Program launcher with optional menu
 Icon=gnome-fs-executable
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
+X-XFCE-Module=launcher
+X-XFCE-Module-Path=@INTERNAL_PLUGIN_PATH@
+
