--- a/plugins/tasklist/tasklist.desktop.in.in
+++ b/plugins/tasklist/tasklist.desktop.in.in
@@ -4,5 +4,6 @@ Encoding=UTF-8
 _Name=Task List
 _Comment=Show all running applications
 Icon=xfce4-taskbar
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
+X-XFCE-Module=tasklist
+X-XFCE-Module-Path=@INTERNAL_PLUGIN_PATH@
 
