--- a/plugins/testplugin/testplugin.desktop.in.in
+++ b/plugins/testplugin/testplugin.desktop.in.in
@@ -4,5 +4,6 @@ Encoding=UTF-8
 _Name=Test Plugin
 _Comment=This plugin has no purpose
 Icon=xfce-mouse
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
+X-XFCE-Module=testplugin
+X-XFCE-Module-Path=@INTERNAL_PLUGIN_PATH@
 
