--- a/plugins/separator/separator.desktop.in.in
+++ b/plugins/separator/separator.desktop.in.in
@@ -3,5 +3,6 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Separator or Spacing
 _Comment=Adds a space or a line between panel items
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
+X-XFCE-Module=separator
+X-XFCE-Module-Path=@INTERNAL_PLUGIN_PATH@
 
