--- a/plugins/showdesktop/showdesktop.desktop.in.in
+++ b/plugins/showdesktop/showdesktop.desktop.in.in
@@ -4,5 +4,6 @@ Encoding=UTF-8
 _Name=Show Desktop
 _Comment=Toggle desktop show/hide
 Icon=gnome-fs-desktop
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
+X-XFCE-Module=showdesktop
+X-XFCE-Module-Path=@INTERNAL_PLUGIN_PATH@
 
