--- a/plugins/windowlist/windowlist.desktop.in.in
+++ b/plugins/windowlist/windowlist.desktop.in.in
@@ -4,5 +4,6 @@ Encoding=UTF-8
 _Name=Window List
 _Comment=Show list of available windows
 Icon=xfce-windowlist
-X-XFCE-Module=@INTERNAL_PLUGIN_PATH@/@PLUGIN_NAME@
+X-XFCE-Module=windowlist
+X-XFCE-Module-Path=@INTERNAL_PLUGIN_PATH@
 
