--- a/plugins/systray/systray.desktop.in.in
+++ b/plugins/systray/systray.desktop.in.in
@@ -4,6 +4,6 @@ Encoding=UTF-8
 _Name=System Tray
 _Comment=Show notification icons
 Icon=xfce-system-info
-X-XFCE-Module=systemtray
+X-XFCE-Module=systray
 X-XFCE-Module-Path=@INTERNAL_PLUGIN_PATH@
 
