--- a/configure.ac.in
+++ b/configure.ac.in
@@ -12,9 +12,9 @@ dnl panel version info
 m4_define([xfce4_panel_version_major], [4])
 m4_define([xfce4_panel_version_minor], [3])
 m4_define([xfce4_panel_version_micro], [99])
-m4_define([xfce4_panel_version_nano],  [2])   dnl leave this empty to have no nano version
+m4_define([xfce4_panel_version_nano],  [3])   dnl leave this empty to have no nano version
 m4_define([xfce4_panel_version_build], [@REVISION@])
-m4_define([xfce4_panel_version_tag],   [])
+m4_define([xfce4_panel_version_tag],   [svn])
 
 m4_define([xfce4_panel_version], [xfce4_panel_version_major().xfce4_panel_version_minor().xfce4_panel_version_micro()ifelse(xfce4_panel_version_nano(), [], [], [.xfce4_panel_version_nano()])ifelse(xfce4_panel_version_tag(), [svn], [xfce4_panel_version_tag()-xfce4_panel_version_build()], [xfce4_panel_version_tag()])])
 
