--- a/configure.ac.in
+++ b/configure.ac.in
@@ -60,7 +60,7 @@ AC_SUBST([LIBXFCE4PANEL_VERINFO])
 
 dnl Check for standard header files
 AC_HEADER_STDC
-AC_CHECK_HEADERS([signal.h stddef.h sys/wait.h time.h])
+AC_CHECK_HEADERS([signal.h stddef.h sys/wait.h time.h string.h])
 AC_CHECK_FUNCS([sigaction])
 
 dnl Check for i18n support
