--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -9,20 +9,7 @@ hicolor48_DATA = \
 	xfce4-iconbox.png \
 	xfce4-taskbar.png \
 	xfce-mouse.png \
-	xfce-edit.png \
-	xfce-filemanager.png \
-	xfce-games.png \
-	xfce-graphics.png \
-	xfce-internet.png \
-	xfce-mail.png \
-	xfce-man.png \
-	xfce-multimedia.png \
-	xfce-printer.png \
-	xfce-schedule.png \
-	xfce-sound.png \
-	xfce-terminal.png \
-	xfce-unknown.png \
-	xfce-utils.png
+	xfce-mail.png
 
 hicolor16_DATA = \
 	xfce-system-exit.png \
