Update documentation and add screenshots.
(Old svn revision: 24212)

--- a/docs/manual/C/images/Makefile.am
+++ b/docs/manual/C/images/Makefile.am
@@ -1,5 +1,11 @@
 imagesdir = $(datadir)/xfce4/doc/C/images
-images_DATA = 
+images_DATA = 				\
+	default_top_panel.png 		\
+	default_bottom_panel.png 	\
+	item_popup.png 			\
+	add_item_dialog.png 		\
+	launcher_properties.png		\
+	panel_manager.png
 
 EXTRA_DIST = $(images_DATA)
 
