--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -32,6 +32,7 @@ xfce4_panel_SOURCES =						\
 xfce4_panel_CFLAGS = 							\
 	-I$(top_srcdir)							\
 	@LIBSTARTUP_NOTIFICATION_CFLAGS@				\
+	@GTHREAD_CFLAGS@						\
 	@LIBX11_CFLAGS@							\
 	@LIBXFCE4UTIL_CFLAGS@						\
 	@LIBXFCEGUI4_CFLAGS@						\
@@ -50,6 +51,7 @@ endif
 
 xfce4_panel_LDADD =							\
 	../libxfce4panel/libxfce4panel.la				\
+	@GTHREAD_LIBS@							\
 	@LIBSTARTUP_NOTIFICATION_LIBS@					\
 	@LIBX11_LIBS@							\
 	@LIBXFCE4UTIL_LIBS@						\
