--- a/mcs-plugin/Makefile.am
+++ b/mcs-plugin/Makefile.am
@@ -1,42 +1,55 @@
-plugindir = $(libdir)/xfce4/mcs-plugins
+# $Id: Makefile.am 24264 2007-01-04 10:42:01Z nick $
 
-plugin_LTLIBRARIES = libxfce4settings.la
+INCLUDES = 								\
+	-I$(top_srcdir)							\
+	-DBINDIR=\"$(bindir)\"						\
+	-DDATADIR=\"$(datadir)\"					\
+	-DG_LOG_DOMAIN=\"panel-mcs-plugin\"				\
+	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"				\
+	$(PLATFORM_CPPFLAGS)
+
+#
+# build mcs wrapper plugin if xfce-mcs-manager is present.
+#
+if HAVE_XFCE_MCS_MANAGER
+plugindir =								\
+	$(libdir)/xfce4/mcs-plugins
+
+plugin_LTLIBRARIES =							\
+	libxfce4settings.la
+
+libxfce4settings_la_SOURCES =						\
+	mcs_plugin.c
+
+libxfce4settings_la_CFLAGS =						\
+	$(LIBXFCEGUI4_CFLAGS)						\
+	$(XFCE_MCS_MANAGER_CFLAGS)					\
+	$(PLATFORM_CFLAGS)
 
 libxfce4settings_la_LDFLAGS =						\
 	-avoid-version							\
-	-module
-
-if HAVE_CYGWIN
-libxfce4settings_la_LDFLAGS +=                                          \
-	-no-undefined                                                   \
-	-export-symbols $(datadir)/xfce4/devel/mcs-manager.def
-endif
-
-libxfce4settings_la_SOURCES =						\
-	plugin.c
-
-libxfce4settings_la_CFLAGS =						\
-	-I$(top_srcdir)							\
-	-DLOCALEDIR=\"$(localedir)\"					\
-	@LIBXFCEGUI4_CFLAGS@						\
-	@XFCE_MCS_MANAGER_CFLAGS@
+	-no-undefined							\
+	-module								\
+	$(PLATFORM_LDFLAGS)
 
 libxfce4settings_la_LIBADD =						\
-	@XFCE_MCS_MANAGER_LIBS@
+	$(LIBXFCEGUI4_LIBS)						\
+	$(XFCE_MCS_MANAGER_LIBS)
+endif
 
+#
 # .desktop file
 #
-desktop_in_files = xfce4-panel-manager.desktop.in
-desktop_files = $(desktop_in_files:.desktop.in=.desktop)
-	
 desktopdir = $(datadir)/applications
-desktop_DATA = $(desktop_files)
-
+desktop_in_files =							\
+	xfce4-panel-manager.desktop.in
+desktop_DATA =								\
+	$(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
-EXTRA_DIST = 								\
+CLEANFILES =								\
+	$(desktop_DATA)
+
+EXTRA_DIST =								\
 	$(desktop_in_files)
 
-DISTCLEANFILES =							\
-	$(desktop_files)
-	
