* *.po, *.pot, POTFILES.in: Regenerate the po files 	  to work with my branch import.
(Old svn revision: 25078)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -27,12 +27,14 @@ plugins/actions/actions.c
 plugins/clock/clock.c
 plugins/iconbox/iconbox.c
 plugins/launcher/launcher.c
+plugins/launcher/launcher-exec.c
 plugins/launcher/launcher-dialog.c
 plugins/pager/pager.c
 plugins/separator/separator.c
 plugins/showdesktop/showdesktop.c
 plugins/systray/systray.c
 plugins/tasklist/tasklist.c
+plugins/tasklist/tasklist-dialogs.c
 plugins/windowlist/windowlist.c
 plugins/windowlist/windowlist-dialog.c
 
