* libxfce4panel/xfce-panel-macros.{c,h}: Add a macro for 	  g_type_register_static_simple which is only available in Glib 2.12. 	* libxfce4panel/*.c: Use g_type_register_static_simple where possible to 	  reduce the number of relocations.
(Old svn revision: 25110)

--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -33,6 +33,7 @@ libxfce4panel_la_SOURCES =						\
 	xfce-panel-plugin-iface.c					\
 	xfce-panel-plugin-iface.h					\
 	xfce-panel-plugin-iface-private.h				\
+	xfce-panel-macros.c						\
 	xfce-panel-plugin-messages.c					\
 	xfce-panel-plugin-messages.h
 
