* Improve the icons with some tango ones or the standard icon names. Also remove 	  the icons that are not needed anymore.
(Old svn revision: 25184)

--- a/icons/48x48/Makefile.am
+++ b/icons/48x48/Makefile.am
@@ -6,6 +6,9 @@ icons_DATA =								\
 	xfce4-panel.png							\
 	xfce4-iconbox.png						\
 	xfce4-taskbar.png						\
+	xfce4-clock.png							\
+	xfce4-separator.png						\
+	xfce4-systray.png						\
 	xfce-mouse.png
 
 EXTRA_DIST =								\
