--- a/plugins/systray/systray.desktop.in.in
+++ b/plugins/systray/systray.desktop.in.in
@@ -3,7 +3,7 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=System Tray
 _Comment=Show notification icons
-Icon=xfce-system-info
+Icon=xfce4-systray
 X-XFCE-Module=systray
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
 
