--- a/config/launcher-7.rc.in
+++ b/config/launcher-7.rc.in
@@ -5,6 +5,6 @@ MoveFirst=false
 _Name=Command Prompt
 _Comment=X terminal emulator
 Icon=utilities-terminal
-Exec=Terminal
+Exec=exo-open --launch TerminalEmulator
 Terminal=false
 StartupNotify=true
