* libxfce4panel/libxfce4panel-1.0.pc.in: Restore directories in the pc file.
(Old svn revision: 25749)

--- a/libxfce4panel/libxfce4panel-1.0.pc.in
+++ b/libxfce4panel/libxfce4panel-1.0.pc.in
@@ -1,7 +1,10 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
+datadir=@datadir@
 libdir=@libdir@
 includedir=@includedir@
+libexecdir=@libexecdir@
+localedir=@localedir@
 
 Name: libxfce4panel
 Description: Library for the Xfce Panel
