* panel/panel-item-manager.c: Rewrite some code, internal plugins 	  now need the X-XFCE-Module-Path entry in the desktop file. A 	  warning is shown if they don't have it. This to avoid wrong module 	  loading (and yes this might break internal plugins, but the plugin's 	  desktop file needs to be fixed instead!). Also fixes bug #3279.
(Old svn revision: 25754)

--- a/panel/Makefile.am
+++ b/panel/Makefile.am
@@ -41,6 +41,7 @@ xfce4_panel_CFLAGS =								\
 	$(LIBSTARTUP_NOTIFICATION_CFLAGS)					\
 	$(LIBXFCE4UTIL_CFLAGS)							\
 	$(LIBXFCEGUI4_CFLAGS)							\
+	$(GMODULE_CFLAGS)							\
 	$(PLATFORM_CFLAGS)
 
 xfce4_panel_LDFLAGS =								\
@@ -52,6 +53,7 @@ xfce4_panel_LDADD =								\
 	$(LIBXFCE4UTIL_LIBS)							\
 	$(LIBXFCEGUI4_LIBS)							\
 	$(LIBSTARTUP_NOTIFICATION_LIBS)						\
+	$(GMODULE_LIBS)								\
 	$(LIBX11_LIBS)
 
 xfce4_panel_DEPENDENCIES =							\
