--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -25,6 +25,7 @@ panel/panel-dialogs.c
 
 plugins/actions/actions.c
 plugins/clock/clock.c
+plugins/clock/clock-dialog.c
 plugins/iconbox/iconbox.c
 plugins/launcher/launcher.c
 plugins/launcher/launcher-exec.c
