--- a/docs/API/Makefile.am
+++ b/docs/API/Makefile.am
@@ -1,83 +1,61 @@
-## Process this file with automake to produce Makefile.in
+# $Id$
 
-# We require automake 1.6 at least.
-AUTOMAKE_OPTIONS = 1.6
+AUTOMAKE_OPTIONS = 1.8
 
-# This is a blank Makefile.am for using gtk-doc.
-# Copy this to your project's API docs directory and modify the variables to
-# suit your project. See the GTK+ Makefiles in gtk+/docs/reference for examples
-# of using the various options.
-
-# The name of the module, e.g. 'glib'.
+# The name of the module.
 DOC_MODULE=libxfce4panel
 
-# The top-level SGML file. You can change this if you want to.
+# The top-level SGML file.
 DOC_MAIN_SGML_FILE=$(DOC_MODULE)-docs.sgml
 
-# The directory containing the source code. Relative to $(srcdir).
-# gtk-doc will search all .c & .h files beneath here for inline comments
-# documenting the functions and macros.
-# e.g. DOC_SOURCE_DIR=../../../gtk
+# The directory containing the source code. Relative to $(srcdir)
 DOC_SOURCE_DIR=../../libxfce4panel
 
-# Extra options to pass to gtkdoc-scangobj. Not normally needed.
+# Extra options to pass to gtkdoc-scangobj
 SCANGOBJ_OPTIONS=
 
-# Extra options to supply to gtkdoc-scan.
-# e.g. SCAN_OPTIONS=--deprecated-guards="GTK_DISABLE_DEPRECATED" 
-SCAN_OPTIONS=
+# Extra options to supply to gtkdoc-scan
+SCAN_OPTIONS=--type-init-func="gtk_type_init(0);g_type_class_ref(G_TYPE_OBJECT)"
 
-# Extra options to supply to gtkdoc-mkdb.
-# e.g. MKDB_OPTIONS=--sgml-mode --output-format=xml
+# Extra options to supply to gtkdoc-mkdb
 MKDB_OPTIONS=--sgml-mode --output-format=xml
 
-# Extra options to supply to gtkdoc-mktmpl
-# e.g. MKTMPL_OPTIONS=--only-section-tmpl
-MKTMPL_OPTIONS=
-
-# Extra options to supply to gtkdoc-fixref. Not normally needed.
-# e.g. FIXXREF_OPTIONS=--extra-dir=../gdk-pixbuf/html --extra-dir=../gdk/html
+# Extra options to supply to gtkdoc-fixref
 FIXXREF_OPTIONS=
 
-# Used for dependencies. The docs will be rebuilt if any of these change.
-# e.g. HFILE_GLOB=$(top_srcdir)/gtk/*.h
-# e.g. CFILE_GLOB=$(top_srcdir)/gtk/*.c
+# Used for dependencies
 HFILE_GLOB=$(top_srcdir)/libxfce4panel/*.h
 CFILE_GLOB=$(top_srcdir)/libxfce4panel/*.c
 
 # Header files to ignore when scanning.
-# e.g. IGNORE_HFILES=gtkdebug.h gtkintl.h
-IGNORE_HFILES=					\
-	xfce-marshal.h				\
-	xfce-panel-external-item.h		\
-	xfce-panel-item-iface.h			\
-	xfce-panel-plugin-iface-private.h	\
+IGNORE_HFILES=								\
+	xfce-marshal.h							\
+	xfce-panel-external-item.h					\
+	xfce-panel-item-iface.h						\
+	xfce-panel-plugin-iface-private.h				\
 	xfce-panel-plugin-messages.h
 
 # Images to copy into HTML directory.
-# e.g. HTML_IMAGES=$(top_srcdir)/gtk/stock-icons/stock_about_24.png
 HTML_IMAGES=
 
 # Extra SGML files that are included by $(DOC_MAIN_SGML_FILE).
-# e.g. content_files=running.sgml building.sgml changes-2.0.sgml
-content_files=version.xml
+content_files=								\
+	version.xml
 
-# SGML files where gtk-doc abbrevations (#GtkWidget) are expanded
-# These files must be listed here *and* in content_files
-# e.g. expand_content_files=running.sgml
-expand_content_files=
+# CFLAGS and LDFLAGS for compiling scan program. Only needed
+# if $(DOC_MODULE).types is non-empty.
+INCLUDES=								\
+	-I$(top_srcdir)							\
+	-I$(top_builddir)						\
+	$(LIBXFCEGUI4_CFLAGS)
 
-# CFLAGS and LDFLAGS for compiling gtkdoc-scangobj with your library.
-# Only needed if you are using gtkdoc-scangobj to dynamically query widget
-# signals and properties.
-# e.g. INCLUDES=-I$(top_srcdir) -I$(top_builddir) $(GTK_DEBUG_FLAGS)
-# e.g. GTKDOC_LIBS=$(top_builddir)/gtk/$(gtktargetlib)
-INCLUDES=-I$(top_srcdir) -I$(top_builddir)/libxfce4panel $(LIBXFCEGUI4_CFLAGS)
-GTKDOC_LIBS=$(top_builddir)/libxfce4panel/libxfce4panel.la $(LIBXFCEGUI4_LIBS)
+GTKDOC_LIBS=								\
+	$(top_builddir)/libxfce4panel/libxfce4panel.la			\
+	$(LIBXFCEGUI4_LIBS)
 
 # This includes the standard gtk-doc make rules, copied by gtkdocize.
 include $(top_srcdir)/gtk-doc.make
 
 # Other files to distribute
-# e.g. EXTRA_DIST += version.xml.in
-EXTRA_DIST += 
+EXTRA_DIST +=								\
+	version.xml.in
