* config/launcher-7.rc.in: Use exo-open instead of Terminal (Bug #3384).
(Old svn revision: 25974)

--- a/config/launcher-7.rc.in
+++ b/config/launcher-7.rc.in
@@ -1,6 +1,6 @@
 [Entry 0]
 _Name=Command Prompt
-Exec=Terminal
+Exec=exo-open --launch TerminalEmulator
 Terminal=false
 StartupNotify=true
 _Comment=X terminal emulator
