--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -33,7 +33,10 @@ plugins/launcher/launcher-dialog.c
 plugins/pager/pager.c
 plugins/separator/separator.c
 plugins/showdesktop/showdesktop.c
-plugins/systray/systray.c
+plugins/systray/xfce-tray-plugin.c
+plugins/systray/xfce-tray-dialogs.c
+plugins/systray/xfce-tray-widget.c
+plugins/systray/xfce-tray-manager.c
 plugins/tasklist/tasklist.c
 plugins/tasklist/tasklist-dialogs.c
 plugins/windowlist/windowlist.c
