--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -26,11 +26,16 @@ panel/panel-dialogs.c
 plugins/actions/actions.c
 plugins/clock/clock.c
 plugins/clock/clock-dialog.c
+plugins/clock/clock-analog.c
+plugins/clock/clock-binary.c
+plugins/clock/clock-digital.c
+plugins/clock/clock-lcd.c
 plugins/iconbox/iconbox.c
 plugins/launcher/launcher.c
 plugins/launcher/launcher-exec.c
 plugins/launcher/launcher-dialog.c
 plugins/pager/pager.c
+plugins/pager/xfce-pager.c
 plugins/separator/separator.c
 plugins/showdesktop/showdesktop.c
 plugins/systray/xfce-tray-plugin.c
