--- a/configure.in.in
+++ b/configure.in.in
@@ -31,7 +31,7 @@ AC_COPYRIGHT([Copyright (c) 2002-2007
         The Xfce development team. All rights reserved.
 
 Written for Xfce by Jasper Huijsmans <jasper@xfce.org>.])
-AC_INIT([xfce4-panel], [xfce4_panel_version()], [http://bugzilla.xfce.org/], [xfce4-panel])
+AC_INIT([xfce4-panel], [xfce4_panel_version], [http://bugzilla.xfce.org/], [xfce4-panel])
 AC_PREREQ([2.50])
 AC_REVISION([$Id$])
 
