remove trailing parens on AC_INIT version info to work around bug in intltool 0.35.x and 0.36.x
(Old svn revision: 26180)

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -25,7 +25,7 @@ AC_COPYRIGHT([Copyright (c) 2002-2007
         The Xfce development team. All rights reserved.
 
 Written for Xfce by Jasper Huijsmans <jasper@xfce.org>.])
-AC_INIT([xfce4-panel], [xfce4_panel_version()], [xfce4-dev@xfce.org])
+AC_INIT([xfce4-panel], [xfce4_panel_version], [xfce4-dev@xfce.org])
 
 dnl init automake
 XFCE4_PANEL_VERSION=xfce4_panel_version()
