--- a/configure.in.in
+++ b/configure.in.in
@@ -151,9 +151,11 @@ dnl *** Check for gtk-doc ***
 dnl *************************
 GTK_DOC_CHECK([1.0])
 
-dnl ***********************************
-dnl *** Check for debugging support ***
-dnl ***********************************
+dnl ******************************************
+dnl *** Disable deprecated Xfce components ***
+dnl ******************************************
+AC_DEFINE([XFCE_DISABLE_DEPRECATED], [1], [Define to 1 to disable deprecated Xfce components])
+
 dnl ***********************************
 dnl *** Check for debugging support ***
 dnl ***********************************
