* configure.in.in: Fix debugging support for SVN snapshots. Until now 	  the default setting never was applied. 	* libxfce4panel/xfce-panel-plugin-iface.c, 	  panel/panel-properties.c: To prevent panel items from increasing the 	  panel size, set the height of the XfceItembar instead of setting the 	  size specifically for all items. 	* libxfce4panel/xfce-panel-plugin-iface.c: Allow attach_widget to be 	  NULL in call to xfce_panel_plugin_position_widget() and fix up the 	  API documentation. Patch by Diego Ongaro and a few bits from me. 	* plugins/windowlist/windowlist.c: fix for popup menu at pointer 	  position. Another patch by Diego. 	* libxfce4panel/*, docs/API/*: Remove the html and xml directories, 	  those are generated by gtk-doc, 100% symbol coverage and improve 	  the layout of the chapters. 	* plugins/clock/clock-digital.c: Allow markup and center the string. 	* plugins/clock/*: Move the localtime functions into 1 util and allow 	  usage without locatime_r. 	* plugins/clock/clock-lcd.c: Typo, the 8 was test code. 	* plugins/clock/*: Import code. 	* NEWS: update. 	* Configure.in.in: Bump GTK dependency to 2.8.0 and add cairo as 	  new dependency. 	* po/*: Merge new strings. 	* libxfce4panel/xfce-panel-macros.h: Add macros to disable debugging for 	  release builds.
(Old svn revision: 26568)

--- a/configure.in.in
+++ b/configure.in.in
@@ -22,7 +22,7 @@ m4_define([xfce4_panel_version], [xfce4_panel_version_major().xfce4_panel_versio
 dnl *******************************************
 dnl *** Debugging support for SVN snapshots ***
 dnl *******************************************
-m4_define([panel_debug_default], [ifelse(panel_version_tag(), [svn], [yes], [minimum])])
+m4_define([panel_debug_default], [ifelse(xfce4_panel_version_tag(), [svn], [yes], [minimum])])
 
 dnl ***************************
 dnl *** Initialize autoconf ***
