* Fix a bunch of compiler warnings. * Remove deprecated gtk_type_class. * Fix icon update hook in launcher, this is bothering me for a long time. * Install settings desktop file in $(datadir)/xfce4/settings-dialogs too. * Fix german typo: Bug 4066. * Fix dnd to launcher: Bug 3958.
(Old svn revision: 27412)

--- a/mcs-plugin/Makefile.am
+++ b/mcs-plugin/Makefile.am
@@ -45,6 +45,10 @@ desktop_in_files =							\
 	xfce4-panel-manager.desktop.in
 desktop_DATA =								\
 	$(desktop_in_files:.desktop.in=.desktop)
+
+settingsdir = $(datadir)/xfce4/settings-dialogs
+settings_DATA = $(desktop_DATA)
+
 @INTLTOOL_DESKTOP_RULE@
 
 CLEANFILES =								\
