* Use web-browser icon. Bug 4181.
(Old svn revision: 27415)

--- a/config/launcher-10.rc.in
+++ b/config/launcher-10.rc.in
@@ -4,7 +4,7 @@ MoveFirst=false
 [Entry 0]
 _Name=Web Browser
 _Comment=Surf the internet
-Icon=internet-web-browser
+Icon=web-browser
 Exec=exo-open --launch WebBrowser
 Terminal=false
 StartupNotify=false
