--- a/configure.in.in
+++ b/configure.in.in
@@ -128,22 +128,12 @@ dnl ***********************************
 XDT_CHECK_OPTIONAL_PACKAGE([XFCE_MCS_MANAGER],
                            [xfce-mcs-manager],
                            [4.4.0], [mcs-plugin],
-                           [xfce-mcs-manager], [yes])
+                           [xfce-mcs-manager], [no])
 
 XDT_CHECK_OPTIONAL_PACKAGE([LIBSTARTUP_NOTIFICATION],
                            [libstartup-notification-1.0],
                            [0.5], [startup-notification],
                            [startup notification library], [yes])
-
-dnl *******************************
-dnl *** Check for dummy scripts ***
-dnl *******************************
-AC_ARG_ENABLE([dummy-scripts],
-              AC_HELP_STRING([--enable-dummy-scripts],
-                       [Install empty scripts for the deprecated xftaskbar4 and xfce4-iconbox @<:@default=enabled@:>@]),
-              [enable_dummy_scripts=$enableval],
-              [enable_dummy_scripts=yes])
-AM_CONDITIONAL([ENABLE_DUMMY_SCRIPTS], [test x"$enable_dummy_scripts" = x"yes"])
 
 
 dnl *************************
