--- a/configure.in.in
+++ b/configure.in.in
@@ -110,7 +110,7 @@ XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.5.91])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.8.0])
 XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.8.0])
 XDT_CHECK_PACKAGE([GMODULE], [gmodule-2.0], [2.8.0])
-XDT_CHECK_PACKAGE([LIBXFCEGUI4], [libxfcegui4-1.0], [4.5.91])
+XDT_CHECK_PACKAGE([LIBXFCEGUI4], [libxfcegui4-1.0], [4.5.91svn-r28280])
 XDT_CHECK_PACKAGE([LIBEXO], [exo-0.3], [0.3.91])
 XDT_CHECK_PACKAGE([CAIRO], [cairo], [1.0.0])
 
