* Add missing functions in the symbols file (bug #4700). * Added a libxfce4panel.h header that includes all other headers for   plugin writers.
(Old svn revision: 29001)

--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -21,6 +21,7 @@ libxfce4panel_built_sources = 						\
 	libxfce4panel-marshal.h
 
 libxfce4panel_headers =							\
+	libxfce4panel.h							\
 	xfce-panel-window.h						\
 	xfce-arrow-button.h						\
 	xfce-itembar.h							\
