* Change a lot of strings to mnemonic labels. * Add some new xfce4-panel icons. * Lot of small fixes in the properties dialogs. * String fixes. * Use a location selector for the launcher dialog. * String review, case fixes. * Other stuff...
(Old svn revision: 29082)

--- a/configure.in.in
+++ b/configure.in.in
@@ -250,6 +250,9 @@ Makefile
 config/Makefile
 icons/Makefile
 icons/16x16/Makefile
+icons/22x22/Makefile
+icons/24x24/Makefile
+icons/32x32/Makefile
 icons/48x48/Makefile
 libxfce4panel/Makefile
 libxfce4panel/libxfce4panel-1.0.pc
