--- a/plugins/systray/systray.desktop.in.in
+++ b/plugins/systray/systray.desktop.in.in
@@ -1,7 +1,7 @@
 [Xfce Panel]
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
-_Name=System Tray
+_Name=Notification Area
 _Comment=Show notification icons
 Icon=xfce4-systray
 X-XFCE-Module=systray
