--- a/settings/xfce4-panel-manager.desktop.in
+++ b/settings/xfce4-panel-manager.desktop.in
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Type=Application
 Encoding=UTF-8
-_Name=Xfce 4 Panel Manager
+_Name=Panel
 _GenericName=Panel Manager
 _X-XfceSettingsName=Panel
-_Comment=Customize Panel
+_Comment=Customize the panel settings
 Exec=xfce4-panel -c
 Icon=xfce4-panel
 Terminal=false
