* Change the name of the Pager to Workspace Switcher. * Some other small string changes. * Update po files.
(Old svn revision: 29084)

--- a/plugins/systray/systray.desktop.in.in
+++ b/plugins/systray/systray.desktop.in.in
@@ -2,7 +2,7 @@
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Notification Area
-_Comment=Show notification icons
+_Comment=Area where notification icons appear
 Icon=xfce4-systray
 X-XFCE-Module=systray
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
