* Update some plugin comments in the desktop files. * Drop unused code (generated an unused translation). * Update some option descriptions. * Regenerate po files and complete dutch translation.
(Old svn revision: 29176)

--- a/plugins/tasklist/tasklist.desktop.in.in
+++ b/plugins/tasklist/tasklist.desktop.in.in
@@ -2,7 +2,7 @@
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Task List
-_Comment=Show all running applications
+_Comment=Switch between open windows using buttons
 Icon=xfce4-taskbar
 X-XFCE-Module=tasklist
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
