--- a/plugins/windowlist/windowlist.desktop.in.in
+++ b/plugins/windowlist/windowlist.desktop.in.in
@@ -2,7 +2,7 @@
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Window List
-_Comment=Show list of available windows
+_Comment=Switch between open windows using a menu
 Icon=preferences-system-windows
 X-XFCE-Module=windowlist
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
