--- a/plugins/showdesktop/showdesktop.desktop.in.in
+++ b/plugins/showdesktop/showdesktop.desktop.in.in
@@ -2,8 +2,7 @@
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Show Desktop
-_Comment=Toggle desktop show/hide
+_Comment=Hide all windows and show the desktop
 Icon=gnome-fs-desktop
 X-XFCE-Module=showdesktop
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
-
