Update default layout for 4.6, previous defaults have not been changed for ages and are not only just plain ugly but also totally subobtimal.
(Old svn revision: 29546)

--- a/config/clock-14.rc
+++ b/config/clock-14.rc
@@ -1,5 +1,10 @@
-mode=2
-military=true
-ampm=false
-secs=false
-show_frame=false
+DigitalFormat=%R
+TooltipFormat=%A %d %B %Y
+ClockType=2
+ShowFrame=false
+ShowSeconds=false
+ShowMilitary=true
+ShowMeridiem=false
+TrueBinary=false
+FlashSeparators=false
+
