Add dist-hook: all to the libxfce4panel/ Makefile.am.
This seems to be required for the gtk-doc scanner to find the .la
library file in make distcheck.

--- a/libxfce4panel/Makefile.am
+++ b/libxfce4panel/Makefile.am
@@ -172,4 +172,7 @@ libxfce4panel-marshal.c: libxfce4panel-marshal.h Makefile
 	&& rm -f xgen-mc
 endif
 
+# required for gtk-doc
+dist-hook: all
+
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
