Build changelog during make dist.

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,6 +20,15 @@ rpm: dist
 html:
 	make -C docs html
 
+.PHONY: ChangeLog
+
+ChangeLog: Makefile
+	(GIT_DIR=$(top_srcdir)/.git git log > .changelog.tmp \
+	&& mv .changelog.tmp ChangeLog; rm -f .changelog.tmp) \
+	|| (touch ChangeLog; echo 'Git directory not found: installing possibly empty changelog.' >&2)
+
+dist-hook: ChangeLog
+
 EXTRA_DIST = 								\
 	README								\
 	COPYING								\
