--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -3,6 +3,7 @@
 SUBDIRS = 								\
 	clock								\
 	launcher							\
-	systray
+	systray								\
+	tasklist
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
