--- a/plugins/tasklist.new/Makefile.am
+++ b/plugins/tasklist.new/Makefile.am
@@ -2,9 +2,9 @@
 
 INCLUDES = 								\
 	-I$(top_srcdir)							\
+	-I$(top_builddir)						\
+	-DBINDIR=\"$(bindir)\"						\
 	-DG_LOG_DOMAIN=\"libtasklist\"					\
-	-DLOCALEDIR=\"$(localedir)\"					\
-	-DWNCK_I_KNOW_THIS_IS_UNSTABLE					\
 	$(PLATFORM_CPPFLAGS)
 
 plugindir =								\
@@ -14,16 +14,15 @@ plugin_LTLIBRARIES =							\
 	libtasklist.la
 
 libtasklist_la_SOURCES = 						\
-	tasklist.c							\
-	tasklist.h							\
-	tasklist-dialogs.c						\
-	tasklist-dialogs.h
+	tasklist-box.c							\
+	tasklist-box.h							\
+	tasklist-plugin.c						\
+	tasklist-plugin.h
 
 libtasklist_la_CFLAGS =							\
 	$(GTK_CFLAGS)							\
 	$(LIBXFCE4UTIL_CFLAGS)						\
 	$(LIBXFCE4UI_CFLAGS)						\
-	$(LIBWNCK_CFLAGS)						\
 	$(PLATFORM_CFLAGS)
 
 libtasklist_la_LDFLAGS =						\
@@ -40,8 +39,7 @@ libtasklist_la_LIBADD =							\
 	$(top_builddir)/libxfce4panel/libxfce4panel.la			\
 	$(GTK_LIBS)							\
 	$(LIBXFCE4UTIL_LIBS)						\
-	$(LIBXFCE4UI_LIBS)						\
-	$(LIBWNCK_LIBS)
+	$(LIBXFCE4UI_LIBS)
 
 libtasklist_la_DEPENDENCIES =						\
 	$(top_builddir)/libxfce4panel/libxfce4panel.la
