--- a/plugins/tasklist.new/tasklist.desktop.in.in
+++ b/plugins/tasklist.new/tasklist.desktop.in.in
@@ -2,8 +2,8 @@
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Task List
-_Comment=Show all running applications
-Icon=xfwm4
+_Comment=Switch between open windows using buttons
+Icon=preferences-system-windows
 X-XFCE-Module=tasklist
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
-X-XFCE-External=FALSE
+X-XFCE-External=TRUE
