Fix some issues in the remote add plugin code.
Also add a dialog to choose between panels when adding a
remote plugin if there is more then 1 panel.

--- a/Panel-desktop-handler.desktop.in.in
+++ b/Panel-desktop-handler.desktop.in.in
@@ -7,6 +7,7 @@ TryExec=xfce4-panel
 Exec=xfce4-panel --add=launcher %F
 Icon=application-x-executable
 Terminal=false
+Hidden=true
 StartupNotify=true
 Type=Application
 MimeType=application/x-desktop;
